--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,8 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="OLÁ, MUNDO!"
-        android:gravity="center"
-        android:textColor="red"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Olá, mundo!"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
