--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
-    
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/imgPlanoFundoPerfil"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:src="#A41414" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="#D9A2A2"
+        android:id="@+id/imgFotoPerfil" />
+
+
+</RelativeLayout>
