--- a/app/src/main/res/layout/fragment_treino.xml
+++ b/app/src/main/res/layout/fragment_treino.xml
@@ -6,4 +6,10 @@
     tools:context=".TreinoFragment">
 
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listTreino"/>
+
+
 </FrameLayout>
