--- a/app/src/main/res/layout/fragment_busca.xml
+++ b/app/src/main/res/layout/fragment_busca.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context=".BuscaFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home"
+        android:text="Busca"
         android:gravity="center"/>
 
 </FrameLayout>
