--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d5dbdb"
+    android:orientation="vertical"
     tools:context=".HomeFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Home"
-        android:gravity="center"/>
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/homelogo"
+        android:layout_width="150dp"
+        android:layout_height="135dp"
+        android:layout_gravity="center"
+        android:src="@drawable/logo2" />
+
+
+    <TextView
+        android:layout_width="440dp"
+        android:layout_height="100dp"
+        android:gravity="center_horizontal"
+        android:text="Bem Vindo,***!"
+        android:textSize="35dp"
+        android:textStyle="bold" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="410dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="-25dp"
+        android:backgroundTint="#092368"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+        </RelativeLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="410dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="7dp"
+        android:backgroundTint="#092368"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></RelativeLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+
+</LinearLayout>
