--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Segunda-Feira"
+                android:text="Segunda-Feira"/>
 
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
