--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/saira"
                 android:gravity="center"
-                android:textColor="#34344c"
+                android:textColor="@color/Cor01"
                 android:textSize="18sp"/>
         </LinearLayout>
 
