--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,61 +7,23 @@
     android:orientation="vertical"
     tools:context=".PerfilFragment">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/personPerfil"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
-        android:src="@drawable/person"
-        app:civ_border_color="#000"
-        app:civ_border_width="2dp" />
-
-
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Minha frequencia"
-        android:textSize="18sp"
-        app:iconSize="30sp"
-        app:icon="@drawable/graphic" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Minha frequencia"
-        android:textSize="18sp"
-        app:iconSize="30sp"
-        app:icon="@drawable/graphic" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/cachorrofofoeasteregg"
+            app:civ_border_width="5dp"
+            app:civ_border_color="@color/Cor02"/>
+        <TextView
+            android:id="@+id/txtNomePerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Minha frequencia"
-        android:textSize="18sp"
-        app:iconSize="30sp"
-        app:icon="@drawable/graphic" />
-
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Minha frequencia"
-        android:textSize="18sp"
-        app:iconSize="30sp"
-        app:icon="@drawable/graphic" />
-
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Minha frequencia"
-        android:textSize="18sp"
-        app:iconSize="30sp"
-        app:icon="@drawable/graphic" />
-
-
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
