--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.AcademiaTCC" parent="Theme.Material3.DayNight.NoActionBar">
-    <item name="android:statusBarColor">#34344c</item>
+    <item name="android:statusBarColor">@color/Cor01</item>
     </style>
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">#6634344C</item>
