--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -17,12 +17,167 @@
             android:clickable="true"
             android:focusable="true">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/duotone" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Segunda-Feira"/>
+                android:fontFamily="@font/saira"
+                android:id="@+id/DiaSemana"
+                android:layout_margin="10dp"
+                android:text="Segunda-Feira"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="13dp"
+                android:layout_marginTop="45dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:text="Peito/Costas"
+                android:textColor="@color/white"
+                android:textSize="19sp" />
 
         </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginHorizontal="10dp"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/duotone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:layout_margin="10dp"
+                android:text="Quarta-Feira"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="13dp"
+                android:layout_marginTop="45dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:text="Pernas Completas"
+                android:textColor="@color/white"
+                android:textSize="19sp" />
+
+        </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginHorizontal="10dp"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/duotone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:layout_margin="10dp"
+                android:text="Sexta-Feira"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="13dp"
+                android:layout_marginTop="45dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:text="Ombro/Tríceps"
+                android:textColor="@color/white"
+                android:textSize="19sp" />
+
+        </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginHorizontal="10dp"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/duotone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:layout_margin="10dp"
+                android:text="Sábado"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="13dp"
+                android:layout_marginTop="45dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/saira"
+                android:text="Bíceps/Costas"
+                android:textColor="@color/white"
+                android:textSize="19sp" />
+
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout><com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:layout_marginHorizontal="10dp"
+    android:clickable="true"
+    android:focusable="true">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/duotone" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira"
+        android:layout_margin="10dp"
+        android:text="Segunda-Feira"
+        android:textColor="@color/white"
+        android:textSize="30sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="45dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira"
+        android:text="Peito/Costas"
+        android:textColor="@color/white"
+        android:textSize="19sp" />
+
+</com.google.android.material.card.MaterialCardView>
+
+
+
 
 </FrameLayout>
