--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".ExerciciosFragment">
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="30dp"
+    android:text="Seus treinos:"
+    android:layout_marginTop="20dp"
+    android:textSize="30sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -143,41 +150,9 @@
                 android:textSize="19sp" />
 
         </com.google.android.material.card.MaterialCardView>
-    </LinearLayout><com.google.android.material.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:layout_marginHorizontal="10dp"
-    android:clickable="true"
-    android:focusable="true">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/duotone" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/saira"
-        android:layout_margin="10dp"
-        android:text="Segunda-Feira"
-        android:textColor="@color/white"
-        android:textSize="30sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="45dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/saira"
-        android:text="Peito/Costas"
-        android:textColor="@color/white"
-        android:textSize="19sp" />
-
-</com.google.android.material.card.MaterialCardView>
 
 
 
+    </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
