--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     tools:context=".ExerciciosFragment">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="30dp"
-    android:text="Seus treinos:"
-    android:layout_marginTop="20dp"
-    android:textSize="30sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/saira"
+        android:text="Seus treinos:"
+        android:textSize="30sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:text="Treino ABC - Foco em Hipertrofia"
+        android:fontFamily="@font/saira"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +31,6 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginHorizontal="10dp"
             android:clickable="true"
             android:focusable="true">
 
@@ -31,30 +41,30 @@
                 android:src="@drawable/duotone" />
 
             <TextView
+                android:id="@+id/DiaSemana"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/saira"
-                android:id="@+id/DiaSemana"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/saira"
                 android:text="Segunda-Feira"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="13dp"
                 android:layout_marginTop="45dp"
-                android:layout_height="wrap_content"
                 android:fontFamily="@font/saira"
                 android:text="Peito/Costas"
                 android:textColor="@color/white"
                 android:textSize="19sp" />
 
         </com.google.android.material.card.MaterialCardView>
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginHorizontal="10dp"
             android:clickable="true"
             android:focusable="true">
 
@@ -67,27 +77,27 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/saira"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/saira"
                 android:text="Quarta-Feira"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="13dp"
                 android:layout_marginTop="45dp"
-                android:layout_height="wrap_content"
                 android:fontFamily="@font/saira"
                 android:text="Pernas Completas"
                 android:textColor="@color/white"
                 android:textSize="19sp" />
 
         </com.google.android.material.card.MaterialCardView>
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginHorizontal="10dp"
             android:clickable="true"
             android:focusable="true">
 
@@ -100,27 +110,27 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/saira"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/saira"
                 android:text="Sexta-Feira"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="13dp"
                 android:layout_marginTop="45dp"
-                android:layout_height="wrap_content"
                 android:fontFamily="@font/saira"
                 android:text="Ombro/Tríceps"
                 android:textColor="@color/white"
                 android:textSize="19sp" />
 
         </com.google.android.material.card.MaterialCardView>
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginHorizontal="10dp"
             android:clickable="true"
             android:focusable="true">
 
@@ -133,17 +143,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/saira"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/saira"
                 android:text="Sábado"
                 android:textColor="@color/white"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="13dp"
                 android:layout_marginTop="45dp"
-                android:layout_height="wrap_content"
                 android:fontFamily="@font/saira"
                 android:text="Bíceps/Costas"
                 android:textColor="@color/white"
@@ -152,7 +162,6 @@
         </com.google.android.material.card.MaterialCardView>
 
 
-
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
