--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -18,12 +18,18 @@
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:src="@drawable/cachorrofofoeasteregg"
-            app:civ_border_width="5dp"
-            app:civ_border_color="@color/Cor02"/>
+            app:civ_border_color="@color/Cor02"
+            app:civ_border_width="5dp" />
+
         <TextView
             android:id="@+id/txtNomePerfil"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/saira"
+            android:gravity="center"
+            android:textColor="@color/Cor01"
+            android:textSize="18sp" />
 
     </LinearLayout>
 </FrameLayout>
