--- a/app/src/main/res/layout/fragment_busca.xml
+++ b/app/src/main/res/layout/fragment_busca.xml
@@ -5,25 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".BuscaFragment">
-
-
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNavView" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layerType="none"
-        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
-        app:itemPaddingBottom="10dp"
-        app:itemTextAppearanceActiveBoldEnabled="false"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/menu" />
+    tools:context=".BuscaFragment"
+    android:background="@color/Cor04">
 
 </RelativeLayout>
