--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    tools:context=".ExerciciosFragment">
+    tools:context=".ExerciciosFragment"
+    android:background="@color/Cor04">
 
     <TextView
         android:layout_width="wrap_content"
