--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PerfilFragment">
+    tools:context=".PerfilFragment"
+    android:background="@color/Cor04">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,8 +29,52 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/saira"
             android:gravity="center"
+            android:text="*Usuário*"
             android:textColor="@color/Cor01"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/meusDados"
+            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/Cor01"
+            android:text="Meus dados"
+            android:textColor="@color/white"
+            app:icon="@drawable/baseline_search"
+            app:iconGravity="textStart"
+            app:iconTint="@color/white" />
+
+        <Button
+            android:id="@+id/ajuda"
+            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/Cor01"
+            android:text="Ajuda"
+            android:textColor="@color/white"
+            app:icon="@drawable/baseline_help_outline"
+            app:iconGravity="textStart"
+            app:iconTint="@color/white" />
+
+        <Button
+            android:id="@+id/sair"
+            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/Cor01"
+            android:text="Sair"
+            android:textColor="@color/white"
+            app:icon="@drawable/baseline_exit_to_app"
+            app:iconGravity="textStart"
+            app:iconTint="@color/white" />
 
     </LinearLayout>
 </FrameLayout>
