--- a/app/src/main/res/layout/modelo_diatreino.xml
+++ b/app/src/main/res/layout/modelo_diatreino.xml
@@ -8,11 +8,11 @@
     android:clickable="true"
     android:focusable="true"
     app:cardCornerRadius="20dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:background="@color/Cor04">
 
 
         <ImageView
-            android:id="@+id/imgModeloFilmes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
