--- a/app/src/main/res/layout/modelo_exercicio_aluno.xml
+++ b/app/src/main/res/layout/modelo_exercicio_aluno.xml
@@ -7,7 +7,8 @@
     android:clickable="true"
     android:focusable="true"
     app:cardCornerRadius="20dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:background="@color/Cor04">
 
 
 
